--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.20",
-		"svelte": "^5.0.0-next.1",
+		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
@@ -22,6 +22,12 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.4"
+		"@fontsource-variable/inter": "^5.0.21",
+		"@fontsource/bebas-neue": "^5.0.22",
+		"@sveltejs/adapter-static": "^3.0.4",
+		"clsx": "^2.1.1",
+		"ky": "^1.7.2",
+		"tailwind-merge": "^2.5.2",
+		"tailwind-variants": "^0.2.1"
 	}
 }
