QOL frontend working

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,9 @@
 		"@sveltejs/adapter-static": "^3.0.4",
 		"clsx": "^2.1.1",
 		"ky": "^1.7.2",
+		"lucide-svelte": "^0.441.0",
+		"mode-watcher": "^0.4.1",
+		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1"
 	}
